ci/update-status-bitbucket-cloud/trigger-event-listener-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: bitbucket-event-listener
  name: el-bitbucket-event-listener
spec:
  port:
    targetPort: http-listener
  to:
    kind: ""
    name: el-bitbucket-event-listener
